--- a/NWebDav.Sample.BasicAuth/appsettings.json
+++ b/NWebDav.Sample.BasicAuth/appsettings.json
@@ -3,14 +3,14 @@
   "Kestrel": {
     "EndPoints": {
       "Http": {
-        "Url": "https://0.0.0.0:5000/"
+        "Url": "http://0.0.0.0:5000/"
       },
       "Https": {
         "Url": "https://0.0.0.0:5443/",
-        "Certificate": {
-          "Path": "../Certificates/localhost.pfx",
-          "Password": "nwebdav"
-        }
+        //"Certificate": {
+        //  "Path": "../Certificates/localhost.pfx",
+        //  "Password": "nwebdav"
+        //}
       }
     }
   }
