--- a/NWebDav.Sample.BasicAuth/appsettings.json
+++ b/NWebDav.Sample.BasicAuth/appsettings.json
@@ -3,10 +3,10 @@
   "Kestrel": {
     "EndPoints": {
       "Http": {
-        "Url": "http://0.0.0.0:5000/"
+        "Url": "http://127.0.0.1:8686/"
       },
       "Https": {
-        "Url": "https://0.0.0.0:5443/",
+        "Url": "https://127.0.0.1:8687/"
         //"Certificate": {
         //  "Path": "../Certificates/localhost.pfx",
         //  "Password": "nwebdav"
