允许修改根目录

--- a/NWebDav.Sample.BasicAuth/appsettings.json
+++ b/NWebDav.Sample.BasicAuth/appsettings.json
@@ -3,15 +3,15 @@
   "Kestrel": {
     "EndPoints": {
       "Http": {
-        "Url": "http://127.0.0.1:8686/"
+        "Url": "http://*:8686/"
       },
-      "Https": {
-        "Url": "https://127.0.0.1:8687/"
-        //"Certificate": {
-        //  "Path": "../Certificates/localhost.pfx",
-        //  "Password": "nwebdav"
-        //}
-      }
+      //"Https": {
+      //  "Url": "https://127.0.0.1:8687/"
+      //  //"Certificate": {
+      //  //  "Path": "../Certificates/localhost.pfx",
+      //  //  "Password": "nwebdav"
+      //  //}
+      //}
     }
   }
 }
